fix(AppHeader): apply spacing adjustments to component layout

--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -27,7 +27,7 @@
 .app-header--style-floating {
   & > div {
     box-shadow: var(--app-header-shadow);
-    margin: calc(var(--eds-spacing-size-3) * 1px);
+    margin: calc(var(--eds-spacing-size-2) * 1px);
     border-radius: calc(var(--eds-theme-border-radius-surfaces-lg) * 1px);
   }
 }
@@ -106,7 +106,7 @@
 .app-header__content {
   display: flex;
   
-  gap: calc(var(--eds-spacing-size-3) * 1px);
+  gap: calc(var(--eds-spacing-size-5) * 1px);
   align-items: center;
   overflow: hidden;
 }
